routing lazy loading et preloading

--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
-☐ stylings config scss et variables css @started(20-12-14 15:32)
-☐ ui component
-☐ lazy loading et routing
+✔ stylings config scss et variables css @started(20-12-14 15:32) @done(20-12-15 10:00) @lasted(18h28m23s)
+✔ ui component @done(20-12-15 10:00)
+✔ lazy loading et routing @done(20-12-15 10:00)
+☐ end ui with directives
+
+☐ tp :
+  ✔ créer le module PageNotFoundModule (lazy loading) @done(20-12-15 11:50)
+  ✔ créer pages/page-not-found-component (declaré sur PageNotFoundModule) @done(20-12-15 11:50)
+  ✔ créer le module PageNotFoundRoutingModule (1 route) @done(20-12-15 11:51)
+  ☐ route pour charger PageNotFoundModule sur AppRoutingModule avec loadChildren
+  ☐ bug à corriger
