pipe async and changeDetectionStrategy OnPush

--- a/TODO
+++ b/TODO
@@ -5,8 +5,8 @@
 ✔ documentation @done(20-12-15 15:37)
 ✔ webpack bundle analyzer @done(20-12-15 15:37)
 
-☐ pipes angular
-☐ pipes perso
+✔ pipes angular @done(20-12-16 15:15)
+✔ pipes perso @done(20-12-16 15:15)
 ☐ pipe async
 
 ☐ tp :
